setup basic routes

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  text-transform: capitalize;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background: rgb(229, 229, 226);
+}
+
+.active {
+  color: orangered;
+}
