--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,15 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.ctg {
+  text-decoration: none;
+  letter-spacing: 1px;
+  color: rgb(161, 46, 4);
+  background: rgb(255, 80, 16);
+  padding: 0.2rem;
+  border-radius: 2px;
+  transition: all 0.3s;
+  margin-right: 0.6rem;
+  line-height: 1.5;
+}
